Closed
Bug 1213454
Opened 9 years ago
Closed 9 years ago
(e10s) Content process NP_GetEntryPoints is broken when async init is enabled
Categories
(Core Graveyard :: Plug-ins, defect)
Core Graveyard
Plug-ins
Tracking
(e10s+, firefox42 wontfix, firefox43+ fixed, firefox44+ fixed)
RESOLVED
FIXED
mozilla44
People
(Reporter: bugzilla, Assigned: bugzilla)
References
Details
Attachments
(1 file)
4.90 KB,
patch
|
jimm
:
review+
lizzard
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
The channel isn't open yet.
Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8672748 -
Flags: review?(jmathies)
tracking-e10s:
--- → +
Updated•9 years ago
|
Attachment #8672748 -
Flags: review?(jmathies) → review+
Comment 3•9 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Assignee | ||
Comment 4•9 years ago
|
||
Comment on attachment 8672748 [details] [diff] [review]
Patch
Approval Request Comment
[Feature/regressing bug #]: async plugin init
[User impact if declined]: crashes when running async init under e10s
[Describe test coverage new/current, TreeHerder]: plugin test suite
[Risks and why]: Low, simple patch that adds a field to existing plugin data transferred between chrome and content processes.
[String/UUID change made/needed]: None
Attachment #8672748 -
Flags: approval-mozilla-aurora?
Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8672748 [details] [diff] [review]
Patch
See comment 4. Looks like this is blocking bug 1211642 on beta.
Attachment #8672748 -
Flags: approval-mozilla-beta?
Updated•9 years ago
|
status-firefox42:
--- → affected
status-firefox43:
--- → affected
Comment 6•9 years ago
|
||
Comment on attachment 8672748 [details] [diff] [review]
Patch
we are not going to ship e10s in 42, so, not taking it.
Attachment #8672748 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
Updated•9 years ago
|
Comment 7•9 years ago
|
||
Comment on attachment 8672748 [details] [diff] [review]
Patch
Has test coverage, and we have a week of aurora left to see how this goes with e10s. It would be great to see the crash rate improve some more - OK to uplift.
Attachment #8672748 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•9 years ago
|
||
Tracking this for 43 and 44 since it's bound up with two features that we're keeping an eye on (e10s and async plugin init).
tracking-firefox43:
--- → +
tracking-firefox44:
--- → +
Comment 9•9 years ago
|
||
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•