Bug 1213454 - Ensure that mSupportsAsyncInit is propagated from content process; r=jimm, a=lizzard